--- a/index.html
+++ b/index.html
@@ -62,15 +62,26 @@
                         </div>
                         <div class="tab-contents" id="experience">
                             <ul>
-                                <li><span>2024(Feb)-(Dec)</span><br>Coputer Operator at Nolimit SriLanka</li>
-                                <li><span>2024(Feb)-(Dec)</span><br>Coputer Operator at Nolimit SriLanka</li>
-                                <li><span>2024(Feb)-(Dec)</span><br>Coputer Operator at Nolimit SriLanka</li> 
+                                <li><span>2024(Feb)-(Dec)</span><br>Computer Operator at Nolimit SriLanka</li>
+                                <p style="font-size: 14px;">In charge of managing stock barcodes, producing and maintaining invoice
+                                    adjustments, and supervising inventory. made ensuring that inventory management
+                                    software was used for correct labeling, data input, and invoice reconciliation. adept at
+                                    using computers, keeping workflows smooth and data accurate for tasks like invoicing
+                                    and stock control.
+                                    </p>
+
                             </ul>
                         </div>
                         <div class="tab-contents" id="education">
                             <ul>
-                                <li><span>2023</span><br>HND in Software Engineering at Esoft Metro Campus</li>
-                                <li><span>2021</span><br>Advance Level</li>
+                                <li><span>2023-2024</span><br>PEARSON-E-SOFT METRO CAMPUS</li>
+                                <p>Higher National Diploma in Computing Science Specialized in Software
+                                    Engineering
+                                    </p>
+                                <li><span>2019-2021</span><br>BADURIYA CENTRAL COLLEGE,MAWANELLA</li>
+                                <p>Advanced Level | Technology Stream<br>
+                                    Earned C in Information & Communication Technology, C in Science
+                                    for Technology and C in Engineering Technology</p>
                                 
                             </ul>
                         </div>
@@ -112,9 +123,8 @@
                     <div class="work">
                         <img src="asset/img/work1.jpg"  height="300">
                         <div class="layer">
-                            <h3>Social Media App</h3>
-                            <p>the app connects you talented people around the world.
-                                Download it from Play store
+                            <h3>Portfolio</h3>
+                            <p>"This is my portfolio website built with HTML, CSS, and JavaScript. It showcases my skills, projects, and experience. The design is responsive, ensuring a smooth user experience across devices. I used HTML for structure, CSS for styling, and JavaScript for interactivity. The site includes sections like about me, my projects, and a contact form."
                             </p>
                             <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         </div>
