i changed  file img and icon file path

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Naja's Website</title>
     <meta name:"description" content="Personal Profile Page of Naja">
-    <link rel="icon" href="E:\Portfolio\asset\img\icon.jpg" type="image/x-icon">
+    <link rel="icon" href="asset\img\icon.jpg" type="image/x-icon">
     <link rel="stylesheet" href="asset\css\style.css">
     <script src="https://kit.fontawesome.com/67fc048b98.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
@@ -39,7 +39,7 @@
         <div class="Container">
             <div class="row">
                 <div class="about-col-1">
-                    <img src="E:\Portfolio\asset\img\Me1.jpeg">
+                    <img src="asset\img\Me1.jpeg">
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title"> About Me</h1>
