--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="Container">
             <div class="row">
                 <div class="about-col-1">
-                    <img src="asset\img\Me1.jpeg">
+                    <img src="asset/img/me1.jpeg">
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title"> About Me</h1>
