updated font size

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                         <img src="asset/img/work1.jpg"  height="300">
                         <div class="layer">
                             <h3>Portfolio</h3>
-                            <p>"This is my portfolio website built with HTML, CSS, and JavaScript. It showcases my skills, projects, and experience. The design is responsive, ensuring a smooth user experience across devices. I used HTML for structure, CSS for styling, and JavaScript for interactivity. The site includes sections like about me, my projects, and a contact form."
+                            <p class="psize">"This is my portfolio website built with HTML, CSS, and JavaScript. It showcases my skills, projects, and experience. The design is responsive, ensuring a smooth user experience across devices.The site includes sections like about me, my projects, and a contact form."
                             </p>
                             <a href="https://github.com/najamohamed2002/Portfolio"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         </div>
